# django-bolt

./: .gitignore  .pre-commit-config.yaml  BENCHMARK_BASELINE.md  BENCHMARK_DEV.md  BOLT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FastAPI.md  IMPLEMENTATION_SUMMARY.md  Makefile  PERFORMANCE_ANALYSIS.md  README.md  SERIALIZERS_README.md  SERIALIZER_COMPARISON.md  SERIALIZER_PERFORMANCE.md  SSE_BENCHMARK_DEV.md  SYNC_DISPATCH_MVP.md  TODO.md  VALIDATION_README.md  bench_dispatch.py  benchmark_comparison.html  benchmark_endpoints.py  benchmark_raw.py  issues.txt  justfile  msgspec_constraints_proposal.md  plan.md  pyproject.toml  pyrightconfig.json  rustfmt.toml  test_msgspec_constraints.py  test_sync_functions.py  test_sync_mvp.sh
.cursor/plans/: dev-8ec45a8a.plan.md
.github/: dependabot.yaml
bench/: BENCHMARK_BASELINE.md  BENCHMARK_DEV.md
docs/: ARCHITECTURE.md  CLASS_BASED_VIEWS.md  GIL_OPTIMIZATION.md  MIDDLEWARE.md  MODEL_SERIALIZER.md  MODEL_SERIALIZERS.md  SERIALIZERS.md  SYNC_FUNCTIONS_IMPLEMENTATION.md  TYPE_CHECKING.md  zensical.toml
docs/src/getting-started/: quickstart.md
docs/src/ref/: api.md  auth.md  settings.md
docs/src/topics/: asgi-mounts.md  authentication.md  lifecycle.md  pagination.md  serializers-custom-fields-design.md  serializers.md
examples/: model_serializer_example.py
python/django_bolt/: __init__.py  _json.py  analysis.py  api.py  async_collector.py  auth.py  binding.py  bootstrap.py  cli.py  cookies.py  datastructures.py  decorators.py  dependencies.py  embedded_urls.py  enums.py  error_handlers.py  event_loop_worker.py  exceptions.py  health.py  lifecycle.py  middleware.py  middleware_response.py  model_serializer.py  pagination.py  param_functions.py  params.py  request.py  request_parsing.py  responses.py  router.py  serialization.py  serializers.py  types.py  typing.py  validation.py  views.py
python/django_bolt/_devtypes/: __init__.py  cli.py  emit.py  inspector.py
python/django_bolt/_jit/: __init__.py  generator.py
python/django_bolt/_kwargs/: extractors.py  runtime.py
python/django_bolt/admin/: __init__.py  admin_detection.py  asgi_bridge.py  django_view_detection.py  django_view_routes.py  routes.py  static.py  static_routes.py
python/django_bolt/auth/: __init__.py  backends.py  guards.py  revocation.py  token.py  user_loader.py
python/django_bolt/logging/: config.py  middleware.py
python/django_bolt/middleware/: __init__.py  compiler.py  compression.py  django_adapter.py  django_loader.py  functional.py  middleware.py  utils.py
python/django_bolt/openapi/: __init__.py  config.py  plugins.py  routes.py  schema_generator.py
python/django_bolt/serializers/: __init__.py  base.py  decorators.py  errors.py  field_mapping.py  fields.py  helpers.py  model_meta.py  model_serializer.py  nested.py  types.py  validators.py
python/django_bolt/templatetags/: bolt_urls.py
python/django_bolt/testing/: __init__.py  client.py  websocket.py
python/django_bolt/tests/: conftest.py  test_action_decorator.py  test_auth_secret_key.py  test_decorator_syntax.py  test_error_handling.py  test_guards_auth.py  test_guards_integration.py  test_json_validation.py  test_jwt_auth.py  test_logging.py  test_logging_merge.py  test_middleware.py  test_middleware_server.py  test_model_viewset.py  test_openapi_metadata.py  test_serializer_validation.py  test_serializers.py  test_server_integration.py  test_syntax.py  test_viewset_unified.py
python/django_bolt/typecheck/: __init__.py
python/django_bolt/websocket/: handlers.py  types.py
python/example/: BLOG_BENCHMARK_README.md  BLOG_BENCHMARK_SUMMARY.md  RUN_BENCHMARK.md  bench_blog_performance.py  debug_django_views.py  test_blog_endpoint.py
python/example/bench/: _types.pyi  api.py  models.pyi
python/example/core/: admin.py  api.py  author_api.py  models.py
python/example/templates/: static_demo.html
python/example/testproject/: api.py  middleware_demo.py  settings.py  urls.py  views.py
python/example/users/: _types.pyi  api.py  models.pyi
python/examples/: embedded_app.py  error_handling_demo.py
python/examples/testproject/: Makefile  gunicorn_config.py  run_asgi.sh  run_uvicorn.py
python/tests/: conftest.py  test_action_decorator.py  test_asgi_mount.py  test_auth_secret_key.py  test_auth_session.py  test_bolt_url.py  test_cookies.py  test_decorator_syntax.py  test_django_middleware_integration.py  test_django_middleware_loader.py  test_django_views.py  test_error_handling.py  test_file_spooling.py  test_guards_auth.py  test_guards_integration.py  test_health.py  test_integration_validation.py  test_json_validation.py  test_jwt_auth.py  test_jwt_token.py  test_lifecycle.py  test_logging.py  test_logging_merge.py  test_middleware.py  test_middleware_server.py  test_middleware_session_auth.py  test_model_serializer.py  test_model_serializer_integration.py  test_model_serializer_orm_example.py  test_model_serializers.py  test_model_viewset.py  test_models.py  test_openapi_docs.py  test_openapi_metadata.py  test_openapi_nested_schema.py  test_orm_analysis.py  test_pagination.py  test_pagination_serializers.py  test_parameter_validation.py  test_queryset_optimization.py  (+22 more)
python/tests/cbv/: test_class_views.py  (+5 more)
scripts/: benchmark.sh  benchmark_compare.py  benchmark_params.sh  benchmark_serializer.py
src/: asgi_http.rs  cookies.rs  core_handler.rs  cors.rs  error.rs  fast_dispatch.rs  form_parsing.rs  handler.rs  json.rs  lib.rs  logging.rs  metadata.rs  params.rs  permissions.rs  request.rs  request_pipeline.rs  response_builder.rs  response_meta.rs  responses.rs  router.rs  server.rs  state.rs  static_files.rs  streaming.rs  test_state.rs  testing.rs  type_coercion.rs  validation.rs  websocket.rs
src/middleware/: auth.rs  cors.rs  mod.rs  rate_limit.rs
src/websocket/: handler.rs
(+46 files in other folders)
