[package]
name = "django-bolt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "django_bolt"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
pyo3-asyncio-0-21 = { version = "0.21", features = ["tokio-runtime"] }
actix-web = "4"
tokio = { version = "1", features = ["full"] }
matchit = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ahash = "0.8"
mimalloc = { version = "0.1", default-features = false }
urlencoding = "2"
num_cpus = "1"
once_cell = "1"
